Fixed modal overflow [#134]
Closes #134

--- a/css/_globals/_mq.scss
+++ b/css/_globals/_mq.scss
@@ -58,6 +58,8 @@
 
     .modal_view {
         width: 70%;
+        max-height: 80%;
+        overflow: overlay;
     }
 }
 
